<resources>
    <string name="app_name">Notes</string>

    <string name="gsm_client_id">907492386886-8ognb2cqpamuot04mq5q28k9tab92e20.apps.googleusercontent.com</string>
    <string name="clientSecret">Syq-hmrYCUICXMKrHydkCcPP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="pull_down_to_get_started">Pull down to get started</string>
    <string name="get_started_by_authenticating">Get started by authenticating</string>
    <string name="confirm">Confirm</string>
    <string name="logout_alert_message">Do you want to logout?</string>
    <string name="title">Title</string>
    <string name="start_typing">Start typing</string>
    <string name="illustration">Illustration</string>
    <string name="empty_notes_list_text">Your notes appear here\ntry adding them from plus icon</string>
    <string name="empty_filter_text">Click on the respective labels\nto apply filter</string>
    <string name="create_new_note">Create new note</string>
    <string name="backup_button">Backup Button</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_and_restore_menu">Backup And Restore Menu</string>
    <string name="add_labels">Add Labels</string>
    <string name="enter_label_name">Enter label name</string>
    <string name="cancel">Cancel</string>
    <string name="label_icon">Label icon</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="create_label">Create label</string>
    <string name="delete">Delete</string>
    <string name="screen_lock">Screen Lock</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="no_label_filter_info_text">You don\'t have any labels to apply filter. Try creating them from respective note.</string>
    <string name="labels">Labels</string>
</resources>