<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/root_side_margin"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/label_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_label_24"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/label_icon"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_toStartOf="@id/save_button"
        android:layout_toEndOf="@id/label_icon"
        android:background="@android:color/transparent"
        android:ellipsize="start"
        android:hint="@string/enter_label_name"
        android:lines="1"
        android:textSize="@dimen/label_text_size" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/root_side_margin"
        android:layout_toStartOf="@id/checkbox"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_baseline_check_24"
        android:visibility="gone"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="-8dp"/>

</RelativeLayout>