<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:background="@color/primary">

    <RelativeLayout
        android:id="@+id/header_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/root_side_margin">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            style="@style/Widget.App.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/root_side_margin"
            android:layout_marginTop="@dimen/root_side_margin"
            android:contentDescription="@string/cancel"
            app:srcCompat="@drawable/ic_back" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/root_side_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/root_side_margin"
            android:layout_toEndOf="@id/back_button"
            android:background="@android:color/transparent"
            android:hint="@string/enter_label_name"
            android:lines="1"
            android:textSize="@dimen/label_text_size">

        </com.google.android.material.textfield.TextInputEditText>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/header_create_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_relative_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/create_label_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/root_side_margin"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_add_24"
            app:tint="@color/black"
            android:contentDescription="@string/create_label"/>

        <TextView
            android:id="@+id/create_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/root_side_margin"
            tools:text="@string/create"
            android:textSize="@dimen/label_text_size"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/label_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_create_label"
        android:paddingStart="8dp"
        android:paddingTop="@dimen/root_side_margin"
        android:paddingEnd="@dimen/root_side_margin"
        android:visibility="visible"
        tools:listitem="@layout/label_list_item" />

</RelativeLayout>