<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".ui.main.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:background="@drawable/circle"
        android:gravity="top|end"
        android:textAlignment="gravity"
        android:translationX="-32dp"
        android:translationY="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="false">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="28dp"
            android:rotation="45"
            android:src="@drawable/ic_baseline_backup_24"
            app:tint="@color/always_black"
            android:contentDescription="@string/backup_and_restore_menu"/>

    </RelativeLayout>

    <Button
        android:id="@+id/backup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/always_white"
        android:scaleX="0"
        android:scaleY="0"
        android:text="@string/backup"
        android:textColor="@color/always_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationZ="1dp"/>

    <Button
        android:id="@+id/restore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/always_white"
        android:scaleX="0"
        android:scaleY="0"
        android:text="@string/restore"
        android:textColor="@color/always_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>