<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/root_side_margin"
            android:layout_marginTop="@dimen/root_side_margin"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/clear_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSurfaceColor="@color/secondary"
            android:text="@string/clear_filter"
            android:textColor="@color/always_black"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/filter_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/root_side_margin"
            android:layout_marginEnd="-8dp"/>

        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_filter_list_24"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toStartOf="@id/action_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/root_side_margin"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.App.FloatingActionButton"
            android:id="@+id/action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/root_side_margin"
            android:layout_marginEnd="@dimen/root_side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_log_out"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/tag_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_constraint_layout"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/root_side_margin"
            android:layout_marginEnd="@dimen/root_side_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/labels"
                android:textColor="@color/secondary"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/black" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/root_side_margin">

            </com.google.android.material.chip.ChipGroup>

        </ScrollView>


    </RelativeLayout>



    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linear_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/secondary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_container"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/illustration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_progress"
        app:layout_constraintVertical_bias="0.37"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/empty_list_illustration"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/ic_no_note_illustration"
            android:contentDescription="@string/illustration" />

        <TextView
            android:id="@+id/empty_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/root_side_margin"
            android:text="@string/empty_notes_list_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_progress"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/note_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="@dimen/root_side_margin"
            android:paddingEnd="@dimen/root_side_margin"
            android:paddingStart="0dp"
            tools:listitem="@layout/note_list_item"
            android:visibility="visible"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.App.FloatingActionButton.Circular"
        android:id="@+id/add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/create_new_note" />

</androidx.constraintlayout.widget.ConstraintLayout>